--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,7 +5,7 @@
 # y usar solo el build de Node.js/Vite
 
 [phases.setup]
-nixPkgs = ['nodejs-18_x', 'npm-9_x']
+nixPkgs = ['nodejs-18_x']
 
 [phases.install]
 cmds = ['npm ci']
