--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
-    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
